--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import './global-theme.css';
+
 *{
   margin: 0;
 }
@@ -24,6 +26,91 @@
 
 .bgAmazon{
   background-color: #eaeded;
+}
+
+.relative{
+  position: relative;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.label_above_input {
+  font-size: 14px;
+  margin-left: 1rem;
+  position: absolute;
+  top: -0.65rem;
+  z-index: 10;
+color: var(--navyLiteConnectColor);
+  background: var(--whiteMainColor);
+  font-family: Product-Regular;
+}
+
+.input_field {
+  background-color: var(--whiteMainColor);
+  color: var(--input-color);
+  border: 1px solid var(--input_border_color);
+  border-radius: 3px;
+  height: 31px;
+  padding: 3px 7px;
+  font-size: 13px;
+  line-height: normal;
+}
+
+.input_field::placeholder{
+  font-size: 13px;
+  color: var(--input-color);
+}
+
+.input_field:focus{
+  outline: unset;
+  border: 1px solid #007185;
+  background-color: var(--whiteMainColor);
+}
+
+.customLoaderScreen{
+  position: fixed;
+  z-index: 999999;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--customLoaderScreenColor);
+  overflow: hidden;
+}
+
+.font-12{
+  font-size: 12px;
+}
+.font-13{
+  font-size: 13px;
+}
+.font-17{
+  font-size: 17px;
+}
+
+.alert_color{
+  color: var(--alert_color);
+}
+
+.cursor{
+  cursor: pointer;
+}
+
+.buttonAddToCart{
+  background-color: #FFD814;
+}
+.buttonAddToCart:hover{
+  background-color: #e8c61e;
+}
+.buttonRemove{
+  background-color: #ffee9b;
 }
 
 .disable_UI{
